# p2pchat

./: Cargo.toml
src/: connect_to.rs  connection.rs  listen.rs  listening.rs  main.rs  manage_chat.rs  manage_packets.rs  send.rs
src/discovery/: find_discovery.rs  handle_packet_discovery.rs  listen_discovery.rs  mod.rs
src/handler/: handle_packet.rs  mod.rs
src/network/: connect_to.rs  listen.rs  mod.rs  send.rs
src/state/: mod.rs  state_chat.rs  state_discovery.rs  state_packets.rs
src/ui/: handle_input.rs  handle_output.rs  mod.rs
