[package]
name = "p2pchat"
version = "0.1.0"
edition = "2024"
authors = ["sim-07 <simone07andreotti@gmail.com>"]

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
local-ip-address = "0.6.8"
rustyline = "17.0.2"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4"] }
